# widerror

./: Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs
tests/: basic.rs
